--- a/homeapp/templates/homeapp/about.html
+++ b/homeapp/templates/homeapp/about.html
@@ -84,7 +84,7 @@
                             </div>
                             <div class="row">
                                 
-                                <div class="col-md-12">
+                                <div class="col-md-12 mb-4">
                                     <div class="about-info">
                                         <p><span class="title-s">Name: </span> <span>Manoj Khanal</span></p>
                                         <p><span class="title-s">Profile: </span> <span>Web Developer</span></p>
